infrastructure/apps/communities-app/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: communities-api
  labels:
    app: communities-api
    component: backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: communities-api
